# commodities_data_warehouse

./: .gitignore  .user.yml  README.md  example.env  profiles.yml  pyproject.toml  trre.py
app/: app.py
datawarehouse/: dbt_project.yml
datawarehouse/docs/: homepage.md
datawarehouse/models/: schema.yml
datawarehouse/models/datamart/: dm_commodities.sql  schema.yml
datawarehouse/models/staging/: schema.yml  stg_commodities.sql  stg_commodities_moviment.sql
datawarehouse/seeds/: commodities_moviment.csv
src/commodities_data_warehouse/: __init__.py  main.py
